Revert "post catalogue"
This reverts commit 9dac80964897d3b75d4b41c26096c05be314bc85.

--- a/Projet Web Commerce/Views/MainMenu/Catalogue.cshtml
+++ b/Projet Web Commerce/Views/MainMenu/Catalogue.cshtml
@@ -114,11 +114,12 @@ else
                         {
                             if (group.Key != null)
                             {
-                                <form method="post" action="@Url.Action("CatalogueVendeur", "MainMenu")">
-                                    <input type="hidden" name="nbPourCon" value="0" />
-                                    <input type="hidden" name="nomAffaire" value="@group.Key" />
-                                    <button type="submit">@group.Key (@group.Count())</button>
-                                </form>
+                                <a asp-controller="MainMenu"
+                                   asp-route-nbPourCon="0"
+                                   asp-route-nomAffaire="@group.Key"
+                                   asp-action="CatalogueVendeur">
+                                    @group.Key (@group.Count())
+                                </a>
 
                                 <br />
                             }
