--- a/Projet Web Commerce/Views/MainMenu/CatalogueVendeur.cshtml
+++ b/Projet Web Commerce/Views/MainMenu/CatalogueVendeur.cshtml
@@ -335,42 +335,39 @@
                         @if (Model.ProduitsList.HasPreviousPage)
                         {
                             <li class="page-item">
-                                <form id="prevForm" method="post" action="@Url.Action("CatalogueVendeur")">
-                                    <input type="hidden" name="sortOrder" value="@Model.sortOrder" />
-                                    <input type="hidden" name="pageNumber" value="@(Model.ProduitsList.PageIndex - 1)" />
-                                    <input type="hidden" name="parPage" value="@Model.parPage" />
-                                    <input type="hidden" name="searchString" value="@Model.searchString" />
-                                    <input type="hidden" name="nomAffaire" value="@Model.nomAffaire" />
-                                    <button type="submit" class="page-link">Précédent</button>
-                                </form>
+                                <a class="page-link" href="@Url.Action("CatalogueVendeur", new {
+    sortOrder = Model.sortOrder,
+    pageNumber = Model.pageNumber - 1,
+    parPage = Model.parPage,
+    searchString = Model.searchString,
+    nomAffaire = Model.nomAffaire
+})">Précédent</a>
                             </li>
                         }
 
                         @for (int i = 1; i <= Model.ProduitsList.TotalPages; i++)
                         {
                             <li class="page-item @(i == Model.ProduitsList.PageIndex ? "active" : "")">
-                                <form id="pageForm_@i" method="post" action="@Url.Action("CatalogueVendeur")">
-                                    <input type="hidden" name="sortOrder" value="@Model.sortOrder" />
-                                    <input type="hidden" name="pageNumber" value="@i" />
-                                    <input type="hidden" name="parPage" value="@Model.parPage" />
-                                    <input type="hidden" name="searchString" value="@Model.searchString" />
-                                    <input type="hidden" name="nomAffaire" value="@Model.nomAffaire" />
-                                    <button type="submit" class="page-link">@i</button>
-                                </form>
+                                <a class="page-link" href="@Url.Action("CatalogueVendeur", new {
+    sortOrder = Model.sortOrder,
+    pageNumber = i,
+    parPage = Model.parPage,
+    searchString = Model.searchString,
+    nomAffaire = Model.nomAffaire
+})">@i</a>
                             </li>
                         }
 
                         @if (Model.ProduitsList.HasNextPage)
                         {
                             <li class="page-item">
-                                <form id="nextForm" method="post" action="@Url.Action("CatalogueVendeur")">
-                                    <input type="hidden" name="sortOrder" value="@Model.sortOrder" />
-                                    <input type="hidden" name="pageNumber" value="@(Model.ProduitsList.PageIndex + 1)" />
-                                    <input type="hidden" name="parPage" value="@Model.parPage" />
-                                    <input type="hidden" name="searchString" value="@Model.searchString" />
-                                    <input type="hidden" name="nomAffaire" value="@Model.nomAffaire" />
-                                    <button type="submit" class="page-link">Suivant</button>
-                                </form>
+                                <a class="page-link" href="@Url.Action("CatalogueVendeur", new {
+    sortOrder = Model.sortOrder,
+    pageNumber = Model.ProduitsList.PageIndex + 1,
+    parPage = Model.parPage,
+    searchString = Model.searchString,
+    nomAffaire = Model.nomAffaire
+})">Suivant</a>
                             </li>
                         }
                     </ul>
