--- a/Projet Web Commerce/Views/Messagerie/Details.cshtml
+++ b/Projet Web Commerce/Views/Messagerie/Details.cshtml
@@ -8,7 +8,7 @@
     ViewData["Title"] = "Message";
     CultureInfo cultureInfo = new CultureInfo("fr-FR");
 
-    string dateFormattee = Model.DateEnvoi.Date.ToString("d MMMM yyyy hh:mm", cultureInfo);
+    // string dateFormattee = Model.DateEnvoi.Date.ToString("d MMMM yyyy hh:mm");
     var auteur = _context.Users.FirstOrDefault(u => u.Id == Model.Auteur)?.Email;
     // var destinataires = _context.PPDestinatairesMessage
     //                              .Where(d => d.NoMessage == Model.NoMessage)
@@ -29,6 +29,7 @@
 }
 
 <style>
+
     .btns {
         width: 10%;
         height: 100%;
@@ -56,7 +57,7 @@
                     <hr />
                     <div class="d-flex justify-content-between align-items-center" style="font-size: 20px;">
                         <span>De: <b>@auteur</b></span> <!-- @Model.Auteur-->
-                        <span class="ml-auto"><b>@dateFormattee</b></span>
+                        <span class="ml-auto"><b>@Model.DateEnvoi</b></span>
                     </div>
                     <div style="font-size: 20px;">
                         À: @Html.Raw(string.Join(", ", destinataires.Select(destinataire => destinataire.DestinataireUser != null 
@@ -69,8 +70,10 @@
                     <br />
                     @if (Model.PieceJointe != null)
                     {
-                        @* <embed id="pieceJointe" name="pieceJointe" src="@Model.PieceJointe"/> *@
-                        <a href="@Url.Action("TelechargerPieceJointe", "Messagerie", new { cheminFichier = Model.PieceJointe })">Télécharger le fichier</a>
+                        <div class="form-floating mb-3" style="width:fit-content">
+                            <a href="@Url.Action("TelechargerPieceJointe", "Messagerie", new { cheminFichier = Model.PieceJointe })" class="form-control">Télécharger la pièce jointe</a>
+                            <label class="form-label">Pièce jointe</label>
+                        </div>
                     }
                     <br />
                     @if (ViewBag.destinataire != null && ViewBag.destinataire.Statut == -1)
