--- a/Projet Web Commerce/Views/MainMenu/CatalogueVendeur.cshtml
+++ b/Projet Web Commerce/Views/MainMenu/CatalogueVendeur.cshtml
@@ -123,7 +123,7 @@
                         </div>
 
                         <div class="col-md-3" style="text-align: center;">
-                            <a href="#" class="show-options-link" style="color:@recherche">Afficher plus d'options +</a>
+                            <a href="#" class="show-options-link" style="color:@recherche; font-weight: bold; text-decoration: none; transition: color 0.3s">Afficher plus d'options +</a>
                         </div>
 
 
@@ -388,13 +388,6 @@
     .dropdown-menu {
         max-height: 200px; /* Set maximum height for the dropdown */
         overflow-y: auto; /* Enable vertical scrolling if needed */
-    }
-
-    a {
-        color: rgb(124, 105, 146);
-        font-weight: bold; /* Bold font */
-        text-decoration: none; /* Remove underline */
-        transition: color 0.3s; /* Smooth transition for color change */
     }
 
     a:hover {
