--- a/Projet Web Commerce/Views/PPGestionnaires/ListeClients.cshtml
+++ b/Projet Web Commerce/Views/PPGestionnaires/ListeClients.cshtml
@@ -55,7 +55,7 @@
                                         <th scope="col">Date de création</th>
                                         <th scope="col">Date de dernière connexion</th>
                                         <th scope="col">Date de dernière visite</th>
-                                        <th scope="col">Nom d'affaire</th>
+                                        <th scope="col">Vendeur</th>
                                         <th scope="col">Supprimer Panier</th>
                                         <th scope="col">Supprimer Client</th>
                                         <th scope="col"></th>
