--- a/Projet Web Commerce/Views/PPProduits/Delete.cshtml
+++ b/Projet Web Commerce/Views/PPProduits/Delete.cshtml
@@ -26,7 +26,7 @@ else
 
     <h3>Êtes-vous sûr de vouloir le supprimer ?</h3>
     <div>
-        <h4>PPProduits</h4>
+        <h4>Produit</h4>
         <hr />
         <dl class="row">
             <dt class="col-sm-2">
