--- a/Projet Web Commerce/Views/PPGestionnaires/ListeVendeursInactifs.cshtml
+++ b/Projet Web Commerce/Views/PPGestionnaires/ListeVendeursInactifs.cshtml
@@ -28,7 +28,7 @@
                                 var groupeParAnnee = (from vendeur in Model.VendeursList
                                                       join user in Model.UtilisateurList
                                                       on vendeur.IdUtilisateur equals user.Id
-                                                      where user.EmailConfirmed && vendeur.DateCreation.Month == date.Mois && vendeur.DateCreation.Year == date.Annee
+                                                      where vendeur.DateCreation.Month == date.Mois && vendeur.DateCreation.Year == date.Annee
                                                       orderby vendeur.NomAffaires
                                                       join commande in Model.CommandesList
                                                       on vendeur.NoVendeur equals commande.NoVendeur into vendeurCommandes
@@ -39,8 +39,7 @@
                                                           Vendeur = vendeur,
                                                           Commande = vc
                                                       })
-                                .ToList();
-
+                                    .ToList();
 
 
 
