--- a/Projet Web Commerce/Views/PPGestionnaires/Taux.cshtml
+++ b/Projet Web Commerce/Views/PPGestionnaires/Taux.cshtml
@@ -8,7 +8,7 @@
     <div class="form-group">
         <input type="hidden" name="id" value="@Model.NoVendeur" />
         <label asp-for="Pourcentage" class="control-label"></label>
-        <input type="number" asp-for="Pourcentage" class="form-control" min="0" max="100" step="any" required />
+        <input type="number" asp-for="Pourcentage" class="form-control" min="0" max="100" step="any"  />
         <span asp-validation-for="Pourcentage" class="text-danger"></span>
     </div>
     <br />
