--- a/Projet Web Commerce/Views/PPProduits/GestionCommandes.cshtml
+++ b/Projet Web Commerce/Views/PPProduits/GestionCommandes.cshtml
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Voici les commandes que vous avez reçus</h1>
+        <h1>Voici les commandes que vous avez reçues</h1>
         <div class="row">
             @foreach (var item in Model)
             {
