--- a/Projet Web Commerce/Views/PPProduits/Index.cshtml
+++ b/Projet Web Commerce/Views/PPProduits/Index.cshtml
@@ -95,6 +95,7 @@
                         <p class="card-text" style="color:@textCard">
                             <b>Prix :</b>
                             @Html.DisplayFor(modelItem => item.PrixDemande)
+                            <span> $</span>
                         </p>
                         <p class="card-text" style="color:@textCard">
                             <b>Categorie :</b>
@@ -123,12 +124,12 @@
                         }
                         else
                         {
-                            <b>Aucune évaluations!</b>
+                            <b>Aucune évaluation!</b>
                         }
                         <div style="margin-top:10px">
                             <a class="btn btn-primary" asp-action="Edit" asp-route-id="@item.NoProduit">Modifier</a>
                             <a> | </a>
-                            <a class="btn btn-success" asp-action="Details" asp-route-id="@item.NoProduit">Details</a>
+                            <a class="btn btn-success" asp-action="Details" asp-route-id="@item.NoProduit">Détails</a>
                             <a> | </a>
                             <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.NoProduit">Supprimer</a>
 
