--- a/Projet Web Commerce/Views/PPProduits/GestionCommandes.cshtml
+++ b/Projet Web Commerce/Views/PPProduits/GestionCommandes.cshtml
@@ -2,6 +2,10 @@
 @using Projet_Web_Commerce.Data
 @inject AuthDbContext _context
 
+@{
+    ViewData["Title"] = "Gestion des commandes";
+}
+
 <!DOCTYPE html>
 <html>
 <head>
