--- a/Projet Web Commerce/Views/Messagerie/BoiteDeReception.cshtml
+++ b/Projet Web Commerce/Views/Messagerie/BoiteDeReception.cshtml
@@ -8,88 +8,10 @@
 }
 
 <style>
-    .truncate {
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        max-width: 450px
-    }
-
-    .msg {
-        color: gray;
-    }
-
-    .flotter:hover {
-        background-color: rgb(236, 235, 243);
-        cursor: pointer;
-    }
-
     .email-non-lu {
-        font-weight: bold; /* Texte en gras */
-        color: #0000FF;
-        background-color: #E6E6FA; 
-    }
-
-    .menu-container {
-        display: block;
-        justify-content: space-between;
-        align-items: center;
-        padding-left: 30%;
-    }
-
-    .menu-btn {
-        border: none;
-        cursor: pointer;
-        text-decoration: none;
-        color: black;
-    }
-
-        .menu-btn:after {
-            content: '\2807';
-            font-size: 110%;
-        }
-
-    .menu-list {
-        list-style-type: none;
-        padding: 0;
-        margin: 0;
-        display: none;
-        position: absolute;
-        background-color: #444;
-        border-radius: 5px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    }
-
-        .menu-list li {
-            padding: 10px;
-        }
-
-            .menu-list li a {
-                text-decoration: none;
-                color: white;
-                display: block;
-            }
-
-                .menu-list li a:hover {
-                    text-decoration: underline;
-                    font-weight: bold;
-                }
-
-    .tooltip .tooltiptext {
-        visibility: hidden;
-        width: 120px;
-        background-color: black;
-        color: #fff;
-        text-align: center;
-        border-radius: 6px;
-        padding: 5px 0;
-        /* Position the tooltip */
-        position: absolute;
-        z-index: 1;
-    }
-
-    .tooltip:hover .tooltiptext {
-        visibility: visible;
+        font-weight: bold;
+        color: rgb(124, 105, 146);
+        background-color: rgb(236, 235, 243); 
     }
 </style>
 
@@ -99,7 +21,7 @@
             <div>
                 @Html.Partial("MenuMessagerie", "BoiteDeReception")
             </div>
-            <div class="card">
+            <div class="card" style="border-top:0; border-color: #dee2e6 #dee2e6 #fff; border-radius:0;">
                 <div class="card-body">
                     <h2 class="card-title">@ViewData["Title"]</h2>
                     <hr />
@@ -149,7 +71,7 @@
 
                                         string rowClass = (!messageLu && msg.TypeMessage == 0) ? "flotter email-non-lu" : "flotter";
 
-                                            <tr class="@rowClass" data-noMessage="@msg.NoMessage" onclick="window.location.href = '@Url.Action("Details", new { idMessage = msg.NoMessage })'">
+                                        <tr class="@rowClass" data-noMessage="@msg.NoMessage" onclick="window.location.href = '@Url.Action("Details", new { idMessage = msg.NoMessage })'">
                                             <td>@(++no)</td>
                                             <td>@_context.Users.FirstOrDefault(u => u.Id == msg.Auteur)?.Email</td>
                                             <td class="truncate">@Html.DisplayFor(modelItem => msg.Sujet) - <span class="msg">@Html.DisplayFor(modelItem => msg.Message)</span></td>
