--- a/Projet Web Commerce/wwwroot/css/site.css
+++ b/Projet Web Commerce/wwwroot/css/site.css
@@ -20,3 +20,79 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+
+/* Messagerie */
+.truncate {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 20vw;
+}
+
+.truncateDest {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 10vw;
+}
+
+.msg {
+    color: #9c9c99;
+}
+
+.flotter:hover {
+    color: rgb(249, 229, 71);
+    background-color: rgb(124, 105, 146);
+    cursor: pointer;
+}
+
+.menu-container {
+    display: block;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 30%;
+}
+
+.menu-btn {
+    border: none;
+    cursor: pointer;
+    text-decoration: none;
+    color: black;
+}
+
+    .menu-btn:after {
+        content: '\2807';
+        font-size: 110%;
+    }
+
+    .menu-btn:hover {
+        color: white;
+    }
+
+.menu-list {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    display: none;
+    position: absolute;
+    background-color: #444;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    font-weight: normal;
+}
+
+    .menu-list li {
+        padding: 10px;
+    }
+
+        .menu-list li a {
+            text-decoration: none;
+            color: white;
+            display: block;
+        }
+
+            .menu-list li a:hover {
+                text-decoration: underline;
+                font-weight: bold;
+            }
